Project

General

Profile

Actions

Bug #18977

closed

rgw: end_marker parameter doesn't work on Swift container's listing

Added by Radoslaw Zarzynski about 7 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
jewel luminous
Regression:
Yes
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

RadosGW and Swift are loaded with the same data.

RadosGW:

$ curl -i "${publicURL}/TestContainer-32150453/?&end_marker=ZzzzObject1234567890" -X GET -H "X-Auth-Token: ${token}"
HTTP/1.1 204 No Content
X-Timestamp: 1487353752.59417
X-Container-Object-Count: 1
X-Container-Bytes-Used: 2
X-Container-Bytes-Used-Actual: 4096
X-Storage-Policy: default-placement
X-Trans-Id: tx000000000000000000002-0058a73b09-1016-default
Accept-Ranges: bytes
Content-Type: text/plain; charset=utf-8
Date: Fri, 17 Feb 2017 18:03:53 GMT

Swift:

$ curl -i "${publicURL}/TestContainer-32150453/?&end_marker=ZzzzObject1234567890" -X GET -H "X-Auth-Token: ${token}"
HTTP/1.1 200 OK
Content-Length: 21
X-Container-Object-Count: 1
Accept-Ranges: bytes
X-Timestamp: 1487354048.60160
X-Container-Bytes-Used: 2
Content-Type: text/plain; charset=utf-8
X-Trans-Id: txebcd8729697b48479e8e9-0058a738e2
Date: Fri, 17 Feb 2017 17:54:42 GMT

TestObject-238677986

Introduced in a5d1fa0587184f43c69d8e03114b58d43f320781.

RadosGW with the commit reverted:

$ curl -i "${publicURL}/TestContainer-32150453/?&end_marker=ZzzzObject1234567890" -X GET -H "X-Auth-Token: ${token}"
HTTP/1.1 200 OK
Content-Length: 20
X-Timestamp: 1487353752.59417
X-Container-Object-Count: 1
X-Container-Bytes-Used: 2
X-Container-Bytes-Used-Actual: 4096
X-Storage-Policy: default-placement
X-Trans-Id: tx000000000000000000002-0058a73fa3-100e-default
Accept-Ranges: bytes
Content-Type: text/plain; charset=utf-8
Date: Fri, 17 Feb 2017 18:23:31 GMT

TestObject-238677986


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #21453: luminous: rgw: end_marker parameter doesn't work on Swift container's listingResolvedRadoslaw ZarzynskiActions
Copied to rgw - Backport #21454: jewel: rgw: end_marker parameter doesn't work on Swift container's listingRejectedActions
Actions #1

Updated by Ken Dreyer about 7 years ago

  • Backport set to jewel
Actions #2

Updated by Yehuda Sadeh about 7 years ago

  • Assignee set to Radoslaw Zarzynski
Actions #3

Updated by Radoslaw Zarzynski almost 7 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Matt Benjamin over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from jewel to jewel luminous
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21453: luminous: rgw: end_marker parameter doesn't work on Swift container's listing added
Actions #6

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21454: jewel: rgw: end_marker parameter doesn't work on Swift container's listing added
Actions #7

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF