rgw: list_objects() honors end_marker regardless of namespace.

This patch fixes a regression related to handling of the end_marker
parameter during Swift's container listing operation. It has been
introduced in a5d1fa0587184f43c69d8e03114b58d43f320781 and causes
Tempest's test_list_container_contents_with_end_marker to fail.

Fixes: http://tracker.ceph.com/issues/18977
Signed-off-by: Radoslaw Zarzynski <rzarzynski@mirantis.com>